<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="custom_app_name">Yay</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Match</string>
    <string name="title_club">Club</string>
    <string name="title_notifications">Message</string>
    <string name="title_mine">Mine</string>
    <string name="public_not_enough_coin">Not enough gems</string>
    <string name="login_agreement">Please read \&#034;Privacy Policy\&#034; and \&#034;Terms of User\&#034;</string>
    <string name="login_google_web_client_id_remote">771687555433-8m21bkngvhtapd6phkvtifbrh6ptq04j.apps.googleusercontent.com</string>
    <string name="login_google_web_client_id_local">771687555433-gab5npokh0sj3rqiovt1qvuv6shpri73.apps.googleusercontent.com</string>
    <string name="login_google_web_client_id">771687555433-oupof2l886igrk43i9vvt6jf5e67cs32.apps.googleusercontent.com</string>
    <string name="login_failed">login failed</string>
    <string name="login_success">login success</string>
    <string name="login_facebook">Login With Facebook</string>
    <string name="login_whatsapp">Login with Test(Demo)</string>
    <string name="login_google">Login with Google</string>
    <string name="login_guest">Guest</string>
    <string name="login_phone_register">Register by phone</string>
    <string name="login_phone_login">Login by phone</string>
    <string name="login_input_number">Enter the phone number</string>
    <string name="login_input_code">Enter verification code</string>
    <string name="login_input_pwd">Please enter your password</string>
    <string name="login_input_pwd_again">Please enter the login password again</string>
    <string name="login_input_right_number">Please enter a valid phone number</string>
    <string name="login_input_right_code">Please enter the correct verification code</string>
    <string name="login_input_right_pwd">Please enter the correct password</string>
    <string name="login_pwd_tip">Login password consists of 4–20 upper or lower case letters, symbols, or numbers</string>
    <string name="login_get_message_code">Send</string>
    <string name="login_sign_up">Register</string>
    <string name="login_login">Login</string>
    <string name="login_pwd_forget">Forget password?</string>
    <string name="login_pwd_get">Retrieve password</string>
    <string name="login_pwd_reset">Reset Password</string>
    <string name="login_next_step">Next step</string>
    <string name="login_next_submit">Submit</string>
    <string name="login_read">I have read and agree to</string>
    <string name="login_user_agreement">Terms of Service</string>
    <string name="login_and">and</string>
    <string name="login_privacy_agreement">Privacy Policy</string>
    <string name="login_phone_code_hint">+00</string>
    <string name="facebook_app_id">566373715252467</string>
    <string name="fb_login_protocol_scheme">fb566373715252467</string>
    <string name="facebook_client_token">01901f392d519967f569962c7f7ac150</string>
    <string name="region_title">Select region</string>
    <string name="region_search_hint">Search</string>
    <string name="region_name">%1$s&#32;%2$s</string>
    <string name="guide_title_gender">Select gender</string>
    <string name="guide_title_age">Select birthday</string>
    <string name="guide_title_region">Select Country</string>
    <string name="guide_title_nickname">Add nickname</string>
    <string name="guide_title_avatar">Add an avatar</string>
    <string name="guide_title_wallpaper">Upload photos</string>
    <string name="guide_title_fun">Highlight interests tags</string>
    <string name="guide_next_step">Continue</string>
    <string name="guide_next_jump">Skip</string>
    <string name="guide_gender_i_am">I am…</string>
    <string name="guide_gender_male">Male</string>
    <string name="guide_gender_female">Female</string>
    <string name="guide_gender_looking_for">Looking for…</string>
    <string name="guide_gender_birthday">My birthday</string>
    <string name="guide_gender_country">My Country</string>
    <string name="guide_nickname_hint">Enter your nickname</string>
    <string name="guide_album_tip">Please upload a photo</string>
    <string name="guide_tag_tip">Highlight interests tags</string>
    <string name="guide_avatar_setting">Upload Avatar</string>
    <string name="guide_avatar_upload">Upload a real profile picture can help you more quickly gain the favor of the opposite sex</string>
    <string name="guide_notice_limit_age">*You must over 18 years of age</string>
    <string name="home_match_video">Video</string>
    <string name="home_match_audio">Voice</string>
    <string name="home_match_game">Game</string>
    <string name="home_match_all_people">Everyone</string>
    <string name="home_match_global">Global</string>
    <string name="home_sex_ref">Gender Filter</string>
    <string name="home_region_ref">Country Filter</string>
    <string name="home_male">Male</string>
    <string name="home_female">Female</string>
    <string name="home_all_gender">Everyone</string>
    <string name="home_choose_tip_1">Members enjoy %1s off</string>
    <string name="home_choose_tip_2">per filter</string>
    <string name="home_my_lemon">My gems</string>
    <string name="home_hand_off">Hands-free mode</string>
    <string name="home_purchase">Recharge</string>
    <string name="home_prime">Prime</string>
    <string name="home_free">Free</string>
    <string name="home_match_begin">Start Matching</string>
    <string name="home_current">current</string>
    <string name="home_online">people online</string>
    <string name="home_click_to_match">click screen to match</string>
    <string name="permission_title">Permission Required</string>
    <string name="permission_sub_title">Yay needs your permission for you to enjoy discover</string>
    <string name="permission_camera_title">Camera Permission</string>
    <string name="permission_camera_content">To show others a real and interesting you</string>
    <string name="permission_micro_title">Microphone Permission</string>
    <string name="permission_micro_content">Delivering Sound during voice/video Calls</string>
    <string name="permission_location_title">Location Permission</string>
    <string name="permission_location_content">To recommend interesting people nearby based on your location</string>
    <string name="permission_notice_title">Notification Permission</string>
    <string name="permission_notice_content">To notify when someone sends you a video or private message</string>
    <string name="permission_check">Ticking means you agree to authorize all the above permissions</string>
    <string name="permission_auth">Continue</string>
    <string name="permission_jump">Skip</string>
    <string name="permission_choose">Please check permissions</string>
    <string name="permission_agree">Please check the consent authorization</string>
    <string name="app_foreground">Running in the foreground</string>
    <string name="match_follow">Follow</string>
    <string name="match_followed">Followed</string>
    <string name="match_video">Video</string>
    <string name="match_audio">Voice</string>
    <string name="match_game">Game</string>
    <string name="match_send_single">Matching…</string>
    <string name="match_chat_hint">Say something…</string>
    <string name="match_chat_send">Send</string>
    <string name="match_chat_split">:</string>
    <string name="match_video_apply">S/he invites you to a Video Call, Accept?</string>
    <string name="match_audio_apply">S/he invites you to a Voice Call, Accept?</string>
    <string name="match_video_reject">The other party has declined</string>
    <string name="match_video_reject_busy">The other party is busy</string>
    <string name="match_video_reject_offline">The other party is offline</string>
    <string name="match_video_next">Skip</string>
    <string name="match_error">Match failed</string>
    <string name="match_timeout">Match timeout</string>
    <string name="match_disconnect">The other party has hung up, continue to match</string>
    <string name="match_connect_timeout">Times out, entering next match</string>
    <string name="match_waiting_to_connect">The Match is successful, awaiting response…</string>
    <string name="match_waiting_to_connect_personal">Awaiting response…</string>
    <string name="match_offline">The other party is offline</string>
    <string name="match_gone">The other party has left</string>
    <string name="match_room_banned">Room blocked</string>
    <string name="match_face_not_found">No face detected</string>
    <string name="match_connection_disconnected">Network connection lost</string>
    <string name="match_connection_connecting">Establishing a network connection</string>
    <string name="match_connection_connected">Network connected</string>
    <string name="match_connection_reconnecting">Re-establishing network connection</string>
    <string name="match_connection_failed">Network connection failed</string>
    <string name="match_failed_invite_title">Recommendations</string>
    <string name="match_failed_invite">Someone has invited you to Club</string>
    <string name="match_failed_invite_accept">Go meet them</string>
    <string name="match_say_hi">Say Hi</string>
    <string name="match_finish">Chat has ended!</string>
    <string name="match_finish_title">Are you satisfied with S/he?</string>
    <string name="match_item_gift_get_more">Get more gems</string>
    <string name="match_item_gift_send">Send</string>
    <string name="match_game_matching">The matching is still in progress. you will be reminded if the match is successful, so feel free to play the game~</string>
    <string name="match_game_tip_1">Rules: Start the lottery after coin insertion</string>
    <string name="match_game_tip_2">Rules: One party pays gems to give the other a chance to win prizes.</string>
    <string name="match_game_tap_1">Gem Paradise</string>
    <string name="match_game_tap_2">Gift paradise</string>
    <string name="match_game_record">Winning record</string>
    <string name="match_game_win">Winning</string>
    <string name="match_game_lottery_time">Lottery %1$s times</string>
    <string name="match_game_start">Start</string>
    <string name="match_game_insert">Insert</string>
    <string name="match_broadcast_content">%1$s gets %2$s %3$s</string>
    <string name="match_game_draw_5">Draw Once %1d</string>
    <string name="match_game_draw_8">Draw Once %1d</string>
    <string name="match_game_draw_30">Ten Times %1d</string>
    <string name="match_game_draw_50">Ten Times %1d</string>
    <string name="match_game_reward_get">Claim</string>
    <string name="account_delete_des_00">Please confirm before deleting</string>
    <string name="account_delete_des_01">1. After deleting your account, the platform will clear all data related to your account. This includes, but is not limited to, membership privileges an gem balances. Please operate with caution!</string>
    <string name="account_delete_des_02">2. The user should confirm that the automatic subscription has been cancelled, so as to avoid automatic deduction after deleting the account.</string>
    <string name="account_delete_des_03">3. It takes 24 hours to delete the account to take effect. During this period, the original account cannot be logged in</string>
    <string name="account_delete_des_04">4. After 24 hours after confirming the cancellation submission, the original login method can log in again and register as a new account on our platform, but it has nothing to do with the canceled account.</string>
    <string name="account_delete_sure">Confirm </string>
    <string name="account_delete_refuse">let me think about it</string>
    <string name="notice_title">打开通知，不错过她的消息</string>
    <string name="notice_content">交友成功率提高10倍</string>
    <string name="notice_open">去开启</string>
</resources>