<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/in_ppjl"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_club"
        android:icon="@drawable/in_club"
        android:title="@string/title_club" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/out_ltxx"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/out_my"
        android:title="@string/title_mine" />

</menu>