<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main"
    android:fitsSystemWindows="false"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_30"
            android:padding="@dimen/dp_10"
            android:src="@drawable/back_grey" />

        <TextView
            android:id="@+id/tv_login_or_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/login_phone_login"
            android:textColor="@color/color_title"
            android:textSize="@dimen/sp_22"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@drawable/shape_corner_light_grey">

            <TextView
                android:id="@+id/tv_phone_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_15"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/login_phone_code_hint"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_5"
                android:src="@drawable/arr_down" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@color/color_grey" />

            <EditText
                android:id="@+id/et_phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@null"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/login_input_number"
                android:inputType="phone"
                android:maxLength="20"
                android:textColor="@color/color_content"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_phone_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_5"
            android:drawableStart="@drawable/gb_dl"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/login_input_right_number"
            android:textColor="@color/color_content"
            android:textSize="@dimen/sp_12"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/fl_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@drawable/shape_corner_light_grey"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_code_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_15"
                android:background="@null"
                android:hint="@string/login_input_code"
                android:inputType="number"
                android:maxLength="8"
                android:textColor="@color/color_content"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_code_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@drawable/shape_corner_yellow"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="@string/login_get_message_code"
                android:textColor="@color/color_content"
                android:textSize="@dimen/sp_12" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_code_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_5"
            android:drawableStart="@drawable/gb_dl"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/login_input_right_code"
            android:textColor="@color/color_content"
            android:textSize="@dimen/sp_12"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/fl_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@drawable/shape_corner_light_grey">

            <EditText
                android:id="@+id/et_pwd_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_50"
                android:background="@null"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/login_input_pwd"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/color_content"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:id="@+id/iv_pwd_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/dp_10"
                android:src="@drawable/pw_hide" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_30">

            <TextView
                android:id="@+id/tv_pwd_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:drawableStart="@drawable/gb_dl"
                android:drawablePadding="@dimen/dp_5"
                android:text="@string/login_input_right_pwd"
                android:textColor="@color/color_content"
                android:textSize="@dimen/sp_12"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_pwd_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_5"
                android:drawablePadding="@dimen/dp_5"
                android:text="@string/login_pwd_forget"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_12"
                android:textStyle="italic" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@drawable/shape_corner_light_grey"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_pwd_input_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_15"
                android:background="@null"
                android:hint="@string/login_input_pwd_again"
                android:inputType="textPassword"
                android:textColor="@color/color_content"
                android:textSize="@dimen/sp_16" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_pwd_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_5"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/login_pwd_tip"
            android:textColor="@color/color_content"
            android:textSize="@dimen/sp_11"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_login_or_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@drawable/background_gradient_yellow"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/login_login"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="@drawable/shape_rectangle_light_yellow"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/login_sign_up"
            android:textColor="@color/color_yellow"
            android:textSize="@dimen/sp_16" />

        <LinearLayout
            android:id="@+id/ll_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/dp_10"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/agreement_check"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/selector_checkbox"
                    android:button="@null"
                    android:checked="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:text="@string/login_read"
                    android:textColor="@color/color_dark_grey"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:text="@string/login_user_agreement"
                    android:textColor="@color/color_content"
                    android:textSize="@dimen/sp_13"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_and"
                    android:textColor="@color/color_dark_grey"
                    android:textSize="@dimen/sp_13" />

                <TextView
                    android:id="@+id/privacy_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:text="@string/login_privacy_agreement"
                    android:textColor="@color/color_content"
                    android:textSize="@dimen/sp_13"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>